<resources>
    <string name="app_name">Tik Tak Team</string>

    <string name="action_settings">Settings</string>

    <string name="pomodoros">Pomodoros</string>

    <string name="loading">Loading&#8230;</string>

    <!-- group card -->
    <string name="cardEdit">EDIT</string>
    <string name="cardDelete">DELETE</string>

    <!-- tabs -->
    <string name="tabAlone">ALONE</string>
    <string name="tabGroup">GROUP</string>
    <string name="tabSettings">SETTINGS</string>

    <!-- pomodoro -->
    <string name="start">START</string>
    <string name="state_working">WORK</string>
    <string name="state_rest">REST</string>
    <string name="state_large_rest">LARGE REST</string>

    <!-- menu & toolbar -->
    <string name="menu_save">Save</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_edit">Edit</string>

    <string name="toolbar_add_session">Add Session</string>
    <string name="toolbar_edit_session">Edit Session</string>
    <string name="toolbar_add_group">Create Group</string>
    <string name="toolbar_edit_group">Edit Group</string>
    <string name="toolbar_add_setting">Add Setting</string>
    <string name="toolbar_edit_setting">Edit Setting</string>

    <!-- Notifications -->
    <string name="notification_base_title">Something changed!</string>
    <string name="notification_base_content">Something has changed recently</string>

    <string name="notification_start_title">A session is about to start!</string>
    <string name="notification_start_content">Click to see the details</string>

    <!-- popup Login & register-->
    <string name="popup_login_required">To use the Tik Tak Team online features you need to login</string>
    <string name="popup_login_button">LOGIN</string>
    <string name="popup_login_signup">SIGN UP</string>
    <string name="popup_login_register">Don\'t have an account yet? Sign Up here</string>
    <string name="popup_login_register_button">SIGN UP</string>

    <string name="popup_login_hint_email">Email</string>
    <string name="popup_login_hint_password">Password</string>
    <string name="popup_login_hint_repeatPassword">Repeat password</string>
    <string name="popup_login_hint_name">Username</string>
    <string name="popup_login_remember">Remember</string>

    <!-- popup Add session -->
    <string name="popup_add_session_name">Name of the session</string>
    <string name="popup_add_session_number_info">Pomodoros:</string>
    <string name="popup_add_session_setting_info">Setting:</string>
    <string name="popup_add_session_number">Name</string>
    <string name="popup_add_session_timeButton">Select start time</string>
    <string name="popup_add_session_timeNotSelected">Start time not selected</string>
    <string name="popup_add_session_err_after_date">You must select a date after %1$s, %2$s, %3$s</string>
    <string name="popup_add_session_err_after_time">You must select a time after %1$s, %2$s</string>


    <!-- group Card -->
    <string name="group_card_members">members in this team</string>
    <string name="group_card_edit">EDIT</string>
    <string name="group_card_delete">DELETE</string>

    <!-- popup Add group -->
    <string name="popup_add_group_name">Name of the group</string>
    <string name="popup_add_group_description">Description</string>
    <string name="popup_add_group_team">Add a member</string>
    
    <!-- popup Alert delete group -->
    <string name="delete_group">Delete this group?</string>

    <!-- popup Alert delete session -->
    <string name="delete_session">Delete this session?</string>

    <!-- popup Members -->
    <string name="popup_members_title">Members</string>

    <string name="delete">Delete</string>

    <!-- popup add members -->
    <string name="searchHint">Search username or email</string>

    <!-- popup add setting -->
    <string name="popup_add_setting_name">Name of the setting</string>
    <string name="popup_add_session_work">Work minutes:</string>
    <string name="popup_add_session_rest">Rest minutes:</string>
    <string name="popup_add_session_large_rest">Large rest minutes:</string>


    <!-- Notifications -->
    <string name="session_new_title">Group %1$s</string>
    <string name="session_new_content">Session %1$s was created</string>

    <string name="session_updated_title">Group %1$s</string>
    <string name="session_updated_content">Session %1$s was created</string>

    <string name="group_added_title">Group %1$s</string>
    <string name="group_added_content">You were added to this group</string>

    <!-- Error messages -->
    <string name="error">There was an error, please try again later</string>
    <string name="emptyFieldError">This field is required</string>
    <string name="emailError">Invalid email</string>
    <string name="passwordError">Invalid password</string>
    <string name="confirmPasswordError">The passwords do not match</string>
    <string name="usernameError">Invalid username</string>
    <string name="sessionNameError">Invalid session name</string>
    <string name="groupNameError">Invalid group name</string>
    <string name="groupDescriptionError">Invalid description</string>

</resources>
