<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/popupLogin_padding_topBottom"
    android:paddingLeft="@dimen/popupLogin_padding_leftRight"
    android:paddingRight="@dimen/popupLogin_padding_leftRight"
    android:paddingTop="@dimen/popupLogin_padding_topBottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/popupLogin_separatorMargin"
        android:layout_weight="7.5"
        android:orientation="vertical">

        <TextView
            style="@style/std_Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/popupLogin_topText_marginBottom"
            android:gravity="center"
            android:text="@string/popup_login_required" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/popup_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/popupLogin_std_marginBottom"
                android:hint="@string/popup_login_hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/popup_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/popupLogin_std_marginBottom"
                android:hint="@string/popup_login_hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/popup_login_button"
            style="@style/baseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/popup_login_button" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:minHeight="@dimen/popupLogin_minRegisterHeight"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            style="@style/std_Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/popupLogin_topText_marginBottom"
            android:gravity="center"
            android:text="@string/popup_login_register" />

        <Button
            android:id="@+id/popup_login_register_button"
            style="@style/baseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_login_register_button" />
    </LinearLayout>

</LinearLayout>