<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Trick to add shadow to the toolbar in pre-v21 versions -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- **** Place Your Content Here **** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/popupAddGroup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_message_reply_black_18dp"
                android:drawablePadding="@dimen/popupAddGroup_drawablePadding"
                android:drawableStart="@drawable/ic_message_reply_black_18dp"
                android:padding="@dimen/popupAddGroup_padding"
                android:hint="@string/popup_add_group_name" />

            <EditText
                android:id="@+id/popupAddGroup_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_information_black_18dp"
                android:drawablePadding="@dimen/popupAddGroup_drawablePadding"
                android:drawableStart="@drawable/ic_information_black_18dp"
                android:padding="@dimen/popupAddGroup_padding"
                android:hint="@string/popup_add_group_description" />

            <Button
                android:id="@+id/popupAddGroup_addMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/addMembersButton"
                android:text="@string/popup_add_group_team"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />
    </FrameLayout>
</LinearLayout>