<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Trick to add shadow to the toolbar in pre-v21 versions -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- **** Place Your Content Here **** -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/popupAddSession_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_message_reply_black_18dp"
                android:drawablePadding="@dimen/popupAddGroup_drawablePadding"
                android:drawableStart="@drawable/ic_message_reply_black_18dp"
                android:padding="@dimen/popupAddGroup_padding"
                android:hint="@string/popup_add_session_name" />

            <EditText
                android:id="@+id/popupAddSession_num"
                android:layout_below="@+id/popupAddSession_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_message_reply_black_18dp"
                android:drawablePadding="@dimen/popupAddGroup_drawablePadding"
                android:drawableStart="@drawable/ic_message_reply_black_18dp"
                android:layout_marginBottom="10dp"
                android:padding="@dimen/popupAddGroup_padding"
                android:hint="TODONumber of Pomodoros" />

            <Button
                android:id="@+id/popupAddSession_timeButton"
                android:layout_below="@+id/popupAddSession_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/popupAddGroup_padding"
                android:layout_marginLeft="@dimen/popupAddGroup_padding"
                android:layout_marginStart="@dimen/popupAddGroup_padding"
                android:layout_marginRight="@dimen/popupAddGroup_padding"
                android:layout_marginEnd="@dimen/popupAddGroup_padding"

                android:text="@string/popup_add_session_timeButton"
                style="@style/baseButton"/>

            <TextView
                android:id="@+id/popupAddSession_timeText"
                android:layout_toRightOf="@+id/popupAddSession_timeButton"
                android:layout_toEndOf="@+id/popupAddSession_timeButton"
                android:layout_alignBaseline="@+id/popupAddSession_timeButton"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_add_session_timeNotSelected"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />
    </FrameLayout>
</LinearLayout>