<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Trick to add shadow to the toolbar in pre-v21 versions -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- **** Place Your Content Here **** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/basePadding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/popupAddAloneSession_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/popup_add_session_name" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/popupAddAloneSession_numLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/popupAddGroup_drawablePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_add_session_number_info" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/popupAddAloneSession_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_indicatorColor="@color/orange"
                    app:dsb_max="10"
                    app:dsb_min="1"
                    app:dsb_progressColor="@color/colorPrimary"
                    app:dsb_trackColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/popupAddAloneSession_settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popupAddSession_name"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/popupAddGroup_drawablePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_add_session_setting_info" />

                <Spinner
                    android:id="@+id/popupAddAloneSession_settingSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />
    </FrameLayout>
</LinearLayout>